--- a/app/src/main/res/layout/upcoming_item_container.xml
+++ b/app/src/main/res/layout/upcoming_item_container.xml
@@ -43,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
+                android:textStyle="bold"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp" />
 
@@ -76,7 +77,9 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="8dp"
                 android:textColor="@color/white"
-                android:textSize="10sp" />
+                android:textStyle="bold"
+                android:textSize="9sp"
+                tools:ignore="SmallSp" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
