--- a/app/src/main/res/layout/loading_activity.xml
+++ b/app/src/main/res/layout/loading_activity.xml
@@ -35,14 +35,20 @@
     </androidx.cardview.widget.CardView>
 
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="40dp"
-        android:scaleY="4" />
+        app:cardCornerRadius="12dp">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleY="4" />
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
