--- a/app/src/main/res/layout/movies_list.xml
+++ b/app/src/main/res/layout/movies_list.xml
@@ -17,20 +17,32 @@
         android:elevation="5dp"
         card_view:cardCornerRadius="15dp">
 
+
+        <View
+            android:id="@+id/card_border_line"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@color/txt_color" />
+
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
 
             <ImageView
                 android:id="@+id/movieImage"
                 android:layout_width="140dp"
                 android:layout_height="220dp"
+                android:layout_marginTop="4dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="fitXY" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
                 android:background="@color/card_color"
                 android:orientation="vertical">
 
@@ -154,6 +166,7 @@
 
 
             </LinearLayout>
+
 
         </LinearLayout>
 
