--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -11,16 +11,16 @@
     <androidx.cardview.widget.CardView
         android:layout_width="125dp"
         android:layout_height="5dp"
+        android:layout_gravity="center"
         android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
         android:layout_marginTop="15dp"
-        app:cardCornerRadius="15dp"
-        android:layout_gravity="center">
+        android:layout_marginEnd="50dp"
+        app:cardCornerRadius="15dp">
 
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/color_font"/>
+            android:background="@color/color_font" />
 
     </androidx.cardview.widget.CardView>
 
