--- a/app/src/main/res/layout/bottom_sheet_cast.xml
+++ b/app/src/main/res/layout/bottom_sheet_cast.xml
@@ -4,6 +4,7 @@
     android:id="@+id/bottom_const"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/bg_blur"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
