--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -45,8 +45,12 @@
                 android:paddingBottom="5dp"
                 android:text="@string/title_movie_details"
                 android:textColor="@color/txt_color"
-                android:textSize="17sp"
+                android:textSize="23sp"
                 android:textStyle="bold"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
                 app:layout_constraintStart_toEndOf="@+id/cover"
                 app:layout_constraintTop_toBottomOf="@+id/poster" />
 
@@ -59,6 +63,10 @@
                 android:text="@string/release_date"
                 android:textColor="@color/txt_color"
                 android:textSize="12sp"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
                 app:layout_constraintStart_toStartOf="@+id/title"
                 app:layout_constraintTop_toBottomOf="@+id/title"
                 tools:ignore="MissingConstraints" />
@@ -75,6 +83,10 @@
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:textStyle="bold"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
                 app:layout_constraintBottom_toBottomOf="@+id/releasetxt"
                 app:layout_constraintStart_toEndOf="@+id/releasetxt"
                 app:layout_constraintTop_toTopOf="@+id/releasetxt"
@@ -106,6 +118,10 @@
                 android:text="@string/score"
                 android:textColor="@color/txt_color"
                 android:textSize="12sp"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
                 app:layout_constraintStart_toStartOf="@+id/releasetxt"
                 app:layout_constraintTop_toBottomOf="@+id/releasetxt"
                 tools:ignore="MissingConstraints" />
@@ -131,8 +147,12 @@
                 android:paddingTop="2dp"
                 android:text="2.3"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="17sp"
                 android:textStyle="bold"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -155,6 +175,10 @@
                 android:paddingEnd="12dp"
                 android:paddingBottom="6dp"
                 android:text="@string/cast"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
                 android:textColor="@color/txt_color"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -163,13 +187,20 @@
                 android:id="@+id/cast_recylcer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="3dp" />
+                android:padding="2dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="12dp"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:paddingBottom="6dp"
+                android:paddingTop="6dp"
                 android:text="@string/storyline"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
                 android:textColor="@color/txt_color"
                 android:textSize="14sp"
                 android:textStyle="bold" />
@@ -178,8 +209,34 @@
                 android:id="@+id/overview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:textSize="12sp" />
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="3dp"
+                android:textSize="12sp"
+                android:shadowColor="#000000"
+                android:shadowDx="3.5"
+                android:shadowDy="1.3"
+                android:shadowRadius="1.6"
+                android:textColor="@android:color/white"/>
+
+
+            <Button
+                android:id="@+id/back_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:layout_marginTop="4dp"
+                android:backgroundTint="@color/txt_color"
+                android:text="@string/similar_back"
+                android:textColor="@color/bg_main"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/cover"
+                app:layout_constraintHorizontal_bias="0.842"
+                app:layout_constraintStart_toStartOf="@+id/cover"
+                app:layout_constraintTop_toBottomOf="@+id/cover" />
 
 
         </LinearLayout>
